adlatus-ci-cd/cd/skeleton/base/patches/agreement-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SERVICE-APP-deployment
  namespace: NAMESPACE
spec:
  template:
    spec:
      containers:
        - name: mongodb
          image: mongo:7
          ports: 
            - containerPort: 27017
              hostPort: 27017
      imagePullSecrets:
        - name: docker-regcred
