adlatus-ci-cd/cd/skeleton/base/patches/agreement-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICE-APP-service
  namespace: NAMESPACE
spec:
  $patch: replace
  selector:
    app: SERVICE-APP
  ports:
    - $patch: replace
    - port: 80
      targetPort: 8080
      name: port1
    - port: 8080
      targetPort: 8080
      name: port2
