adlatus-ci-cd/cd/skeleton/base/patches/agreement-api/ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: SERVICE-APP-ingress
  namespace: NAMESPACE
